--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <div class="slide ten" data-index="9" data-status="unknown"></div>
         </div>
         <div class="nav-dots">
-            <div class="circle first"></div>
-            <div class="circle second"></div>
-            <div class="circle third"></div>
-            <div class="circle fourth"></div>
-            <div class="circle fifth"></div>
-            <div class="circle sixth"></div>
-            <div class="circle seventh"></div>
-            <div class="circle eighth"></div>
-            <div class="circle ninth"></div>
-            <div class="circle tenth"></div>
+            <div class="circle first active" onclick="displayIndex(0)"></div>
+            <div class="circle second" onclick="displayIndex(1)"></div>
+            <div class="circle third" onclick="displayIndex(2)"></div>
+            <div class="circle fourth" onclick="displayIndex(3)"></div>
+            <div class="circle fifth" onclick="displayIndex(4)"></div>
+            <div class="circle sixth" onclick="displayIndex(5)"></div>
+            <div class="circle seventh" onclick="displayIndex(6)"></div>
+            <div class="circle eighth" onclick="displayIndex(7)"></div>
+            <div class="circle ninth" onclick="displayIndex(8)"></div>
+            <div class="circle tenth" onclick="displayIndex(9)"></div>
         </div>
         <div class="slider-buttons">
             <button id="back" onclick="handleLeftClick()">
